# Continuous

./: .gitignore  CLAUDE.md  README.md  SIB_REFACTORING_ANALYSIS.md  algorithms.py  analysis.py  aws.py  buttons.py  colors.py  common_exceptions.py  dac.py  dev.py  emailer.py  exceptions.py  guided_setup.py  helper_functions.py  indicator.py  information_panel.py  initialization.py  install_script.py  link_button.py  logger.py  main.py  main_cell.py  main_foaming.py  main_shared.py  notes.py  pdf.py  plotting.py  port_allocator.py  reader_interface.py  readers.py  release_notes.py  server.py  settings.py  setup.py  sib.py  software_update.py  test.py  text_notification.py  (+2 more)
.github/workflows/: deploy.yml
.run/: Deploy IBI Flow Cell.run.xml  Deploy Skroot Continuous.run.xml  Deploy WW Continuous.run.xml  Run App.run.xml
docs/: software-update-pipeline.d2
resources/: delete_old_files  desktopApp.desktop  release-notes.json  version.json
resources/scripts/: deployment_script.py  install-script.sh  requirements.txt
resources/sibcontrol/: .gitignore  README.md  pyproject.toml
resources/sibcontrol -copy/documentation/: command_list.md  sibcontrol_api.md
resources/sibcontrol -copy/sibcontrol/: sib350.py
resources/sibcontrol/documentation/: example.py  sibcontrol_api.md
resources/sibcontrol/sibcontrol/: __init__.py  dds.py  sib350.py  sibutils.py
src/app/: main.py
src/app/algorithm/: algorithms.py  contamination_algorithm.py  harvest_algorithm.py
src/app/authentication/: authentication_popup.py  lockout_notification.py
src/app/aws/: aws.py
src/app/barcode_scanner/: barcode.py  barcode.pyi  barcode_scanner.py
src/app/buttons/: button_interface.py  calibrate_readers.py  connect_reader.py  connect_readers.py  guided_setup_button.py  help_button.py  plus_icon_button.py  power_button.py  start_button.py  stop_button.py  view_issue_button.py
src/app/common_modules/: common_modules.py
src/app/custom_exceptions/: analysis_exception.py
src/app/exception/: analysis_exception.py  sib_exception.py
src/app/factory/: use_case_factory.py
src/app/file_manager/: common_file_manager.py  global_file_manager.py  reader_file_manager.py
src/app/helper/: helper_functions.py  run_on_interval.py  (+1 more)
src/resources/: 52-usb.rules  README_Analysis.md  desktopApp.desktop  experiment_notes_template.json  release-notes-manufacturing.json  release-notes.json  version.json  version.py
src/resources/pwquality_windows/: README.md  pyproject.toml  setup.cfg  setup.py
src/resources/pwquality_windows/pwquality_windows/: __init__.py
src/resources/pwquality_windows/pwquality_windows.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/resources/sibcontrol/: README.md  pyproject.toml
src/resources/sibcontrol/documentation/: command_list.md
src/resources/sibcontrol/sibcontrol/: sib350.py
src/resources/sibcontrol/sibcontrol/ncomm/: LICENSE
tests/: TESTING_GUIDE.md  captive_portal_simulator.py  debug_portal.py  test_wifi_authentication.py
unit_tests/: buttons_test.py  port_allocator_test.py  release_notes_test.py
windows_resources/: .gitignore  SkrootReadersCell.spec  SkrootReadersFoaming.spec  pyinstaller_command_cell.sh  pyinstaller_command_foaming.sh
(+389 files in other folders)
