[metadata]
name = pwquality-windows
version = 1.0.0
description = Windows-compatible interface replicating Ubuntu python-pwquality package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pwquality-windows
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # No external dependencies required
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    flake8
    mypy

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*